# silt-lua

./: CHANGELOG.md  Cargo.toml  README.md  RECOMMENDATIONS.md  SPEC.md  build-wasm.sh  shell.nix
examples/: userdata_example.rs
scripts/: TODO.md  anon-func.lua  baseline-test.lua  closure.lua  closure2.lua  closure3.lua  closure4.lua  concat.lua  curry.lua  ent.lua  error.lua  ex.lua  fib-global.lua  fib.lua  for-up.lua  for.lua  gc.lua  global.lua  goto.lua  grouping.lua  hoist.lua  if.lua  local-curry.lua  loop.lua  metacall.lua  multi-assign.lua  oop-error.lua  oop.lua  redefine.lua  return.lua  return2.lua  return3.lua  scope.lua  scope2.lua  scope3.lua  scope4.lua  silt.lua  silt2.lua  t.lua  table.lua  (+2 more)
src/: chunk.rs  code.rs  compiler.rs  compiler_old.rs  environment.rs  error.rs  expression.rs  function.rs  interpreter.rs  lexer.rs  lib.rs  lsp.rs  lua.rs  main.rs  object.rs  parser.rs  prelude.rs  resolver.rs  silt.rs  standard.rs  statement.rs  table.rs  token.rs  types.rs  userdata.rs  value.rs  vec.rs  vm.rs
src/archive/: environment.rs
src/compilers/: moon.rs
tests/: multi_test.rs  shared.rs
wasm-tester/: index.html
