[package]
name = "silt-lua"
version = "0.3.0"
authors = ["MakeAvoy <auxnon@gmail.com>"]
repository = "https://github.com/auxnon/silt-lua"
license = "MIT"
edition = "2021"
keywords = ["lua", "interpreter", "language", "vm", "script"]
description = "A pure rust Lua interpreter and virtual machine"
categories = ["compilers", "config"]
exclude = [
    "./build-wasm.sh",
    "./.vscode/launch.json",
    "./wasm-tester/index.html",
]

[lib]
name = "silt_lua"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "silt"
path = "src/main.rs"

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true
panic = "abort"


[profile.wasm]
inherits = "release"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["silt"  ]
silt = [
    "bang",
    "under-number",
    "global",
"implicit-return",
    "short-declare",
    # "vectors",
]
wasm=["wasm-bindgen", "serde", "serde-wasm-bindgen"]
under-number = []
bang = []
global = []
short-declare = []
implicit-return = []
vectors = []
dev-out = []

[dependencies]
byteyarn = "0.5.1"
wasm-bindgen = {version= "0.2.103", optional=true }
serde = { version = "1.0.219", features = ["derive"], optional=true }
serde-wasm-bindgen = {version="0.6.5", optional=true}
gc-arena = {version= "0.5.3", features=["allocator-api2"] }
string-interner = "0.18.0"
colored = "3.0.0"
lending-iterator = "0.1.7"
# rustc-hash="1.1.0"
# ahash="0.8.3"
